0.243 2025-12-10
  [Incompatible Changes]
    * Rename IO::Socket#write method to syswrite.

0.242 2025-10-14
  [Internal Changes]
    * Refactor options.

0.241 2025-10-13
  [Incompatible Changes]
    * IO::Poll#disabled_fd_indexes field is changed.
      [Before]
      has disabled_fd_indexes : IntList;
      [After]
      has disabled_fd_indexes : int[];
    
0.240 2025-10-13
  [Incompatible Changes]
    * IO::Select#fds_list field is changed.
      [Before]
      has fds_list : IntList;
      [After]
      has fds : int[];
    
0.239 2025-10-13
  [Internal Changes]
    * Do internal changes to catch up latest SPVM.
  [Requirement Changes]
    * Require SPVM 0.990102.
    
0.238 2025-08-12
  [New Features]
    * Support int mode and permissions in IO::File#open method.
    
  [Changes]
    * Nagle algorizm is on over TCP.
  [Document Improvement]
    * Add the link to IO.
0.237 2025-05-23
  [Requirement Changes]
    * Require SPVM::Sys 0.540.
  [Incompatible Changes]
    * IO::Dir#read method returns a file name instead of a directory entry.
0.236 2025-03-13
  [New Features]
    * Add IO::File#seek method.
    * Add IO::File#tell method.
    
0.235 2025-03-12
  [Bug Fix]
    * Fix a bug that IO::File#read method's $legnth is not set to the default value.
    * Fix a bug that a file handle is not closed in the object destruction.
    
  [Changes]
    * IO::File#close throws an exception when the file is not opened.
    * Add DESTROY method to IO::Handle and remove that in IO::Socket.
  
  [Requirement Changes]
    * Require SPVM 0.990048.
  
  [Internal Changes]
    * Add IO::Socket#Category field.
    * Add protected enum to IO::Socket.
      protected enum {
        CATEGORY_CLIENT,
        CATEGORY_SERVER,
        CATEGORY_ACCEPTED,
      }
    
0.234 2025-02-21
  [Test Internal Chnages]
    * Do not use Fn#grep method.
    
0.233 2025-01-27
  [Requirement Changes]
    * Require SPVM 0.990042.
    * Require SPVM::Regex 0.246.
  [Test Improvement]