@@ -533,7 +533,7 @@ class TestCase::IO::Socket::IP {
           
           my $data = (mutable string)new_string_len 1;
           
-          my $read_length = $client_socket->read($data);
+          my $read_length = $client_socket->sysread($data);
           
           if ($read_length > 0) {
             $client_socket->syswrite($data);
@@ -660,7 +660,7 @@ class TestCase::IO::Socket::IP {
             
             my $data = (mutable string)new_string_len 1;
             
-            my $read_length = $client_socket->read($data);
+            my $read_length = $client_socket->sysread($data);
             
             if ($read_length > 0) {
               $client_socket->syswrite($data);
@@ -794,7 +794,7 @@ class TestCase::IO::Socket::IP {
             Go->sleep(0.5);
             
             my $read_length = 0;
-            eval { $read_length = $client_socket->read($data); }
+            eval { $read_length = $client_socket->sysread($data); }
             
             if ($read_length > 0) {
               eval { $client_socket->syswrite($data); }
