@@ -30,7 +30,7 @@ class TestUtil {
         
         my $data = (mutable string)new_string_len 1;
         
-        my $read_length = $client_socket->read($data);
+        my $read_length = $client_socket->sysread($data);
         
         if ($read_length > 0) {
           $client_socket->syswrite($data);
@@ -83,7 +83,7 @@ class TestUtil {
             
             my $data = (mutable string)new_string_len 1;
             
-            my $read_length = $client_socket->read($data);
+            my $read_length = $client_socket->sysread($data);
             
             if ($read_length > 0) {
               $client_socket->syswrite($data);
@@ -122,7 +122,7 @@ class TestUtil {
       
       my $data = (mutable string)new_string_len 1;
       
-      my $read_length = $client_socket->read($data);
+      my $read_length = $client_socket->sysread($data);
       
       if ($read_length > 0) {
         $client_socket->syswrite($data);
@@ -156,7 +156,7 @@ class TestUtil {
       
       my $data = (mutable string)new_string_len 1;
       
-      my $read_length = $client_socket->read($data);
+      my $read_length = $client_socket->sysread($data);
       
       if ($read_length > 0) {
         $client_socket->syswrite($data);
